--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Media</string>
-    <string name="app_name_desc">Media APP</string>
+    <string name="app_name">WellMedia</string>
+    <string name="app_name_desc">WellMedia APP</string>
     <string name="app_desc">一个用于熟悉音视频开发的 Android 项目</string>
-    <string name="app_title">Media</string>
+    <string name="app_title">WellMedia</string>
     <string name="audio">音频</string>
     <string name="video">视频</string>
     <string name="image">图像</string>
