--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="close">收起</string>
     <string name="audio_play">音频播放</string>
     <string name="audio_record">音频录制</string>
+    <string name="video_view_play">VideoView 播放视频</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
