--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="audio_record">音频录制</string>
     <string name="video_view_play">VideoView 播放视频</string>
     <string name="media_player_play_video">MediaPlayer 播放视频</string>
+    <string name="media_codec_play_video">MediaCodec 播放视频</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="zero_time_text">00:00</string>
