--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="zero_time_text">00:00</string>
+    <string name="start_record">开始录制</string>
+    <string name="stop_record">结束录制</string>
 </resources>
