--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="zero_time_text">00:00</string>
     <string name="start_record">开始录制</string>
     <string name="stop_record">结束录制</string>
+    <string name="initializing">初始化中&#8230;</string>
 </resources>
