--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="media_player_play_video">MediaPlayer 播放视频</string>
     <string name="media_codec_play_video">MediaCodec 播放视频</string>
     <string name="camerax_record_video">CameraX 录制视频</string>
+    <string name="camera2_take_photo">Camera2 拍摄 JPEG</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="zero_time_text">00:00</string>
