--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="image">图像</string>
     <string name="open">展开</string>
     <string name="close">收起</string>
-    <string name="audio_play">AudioTrack播放音频</string>
+    <string name="audio_play">MediaPlayer播放音频</string>
     <string name="audio_record">音频录制</string>
     <string name="video_view_play">VideoView 播放视频</string>
     <string name="media_player_play_video">MediaPlayer 播放视频</string>
