feat: 增加 native 能力的支持，使用 AS 生成 lame 的 so。todo: 使用录音编码为 mp3 的功能。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,8 @@
     <string name="open">展开</string>
     <string name="close">收起</string>
     <string name="audio_play">MediaPlayer播放音频</string>
-    <string name="audio_record">音频录制</string>
+    <string name="audio_record">AAC格式音频录制</string>
+    <string name="audio_record_mp3">MP3格式音频录制</string>
     <string name="video_view_play">VideoView 播放视频</string>
     <string name="media_player_play_video">MediaPlayer 播放视频</string>
     <string name="media_codec_play_video">MediaCodec 播放视频</string>
